# Chess

./: README.md
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx
client/src/components/: Multiplayer.jsx  index.js
server/: pyproject.toml
server/core/: settings.py
